# blocksworld_simulation

./: Blocksworld_MCP_Server.py  MCP-Server.py  README.md  blocksworld.py  box_world.py  main.py  pyproject.toml
.claude/: settings.local.json
docs/: rest-api.md
mcp/: .gitignore  mcp_server.py  pyproject.toml
simulation/: blocksworld.py  box.py  main.py  pyproject.toml  robot_arm.py  test.py
simulation/src/api/: api.py
simulation/src/simulation/: box.py  robot_arm.py
src/api/: api.py
src/blocksworld_simulation/: main.py
src/blocksworld_simulation/api/: api.py  request_validation.py
src/blocksworld_simulation/api/request_models/: __init__.py  execution_plan.py  info_requests.py  plan.py  robot_action_requests.py  start_simulation_request.py  start_stop_simulation_request.py
src/blocksworld_simulation/constraints/: constraint.py  constraint_manager.py  constraint_set.py
src/blocksworld_simulation/scenarios/: scenario_manager.py  scenario_models.py
src/blocksworld_simulation/scenarios/definitions/: 0_0_simple_unstacking_challenge.json  0_1_simple_stacking_challenge.json  0_2_simple_partial_tower.json  0_3_reverse_challenge.json  0_3_simple_tower.json  0_4_simple_tower.json  0_5_impossible_nonexistent_block.json  0_6_impossible_duplicate_block.json  0_7_impossible_unreachable_order.json  1_0_multi_tower_unstacking.json  1_1.json  1_10.json  1_10_quad_stack_organization.json  1_11_ultimate_tower.json  1_12_impossible_insufficient_stacks.json  1_1_pyramid_challenge.json  1_2.json  1_2_reverse_pyramid.json  1_3.json  1_3_cross_stack_sorting.json  1_4.json  1_4_triple_stack_merge.json  1_5.json  1_5_complex_stacking.json  1_6.json  1_6_complex_sorting.json  1_7.json  1_7_alternating_tower.json  1_8.json  1_8_balanced_distribution.json  1_9.json  1_9_multi_goal_challenge.json  2_1.json  2_10.json  2_1_hanoi_towers.json  2_1_hanoi_towers_3.json  2_2.json  2_2_hanoi_towers_4.json  2_3.json  2_3_hanoi_towers_5.json  (+40 more)
src/blocksworld_simulation/simulation/: action_processor.py  block.py  input_processor.py  robot.py  robot_drawer.py  settings.py  simulation.py  simulation_action.py  simulation_input.py  simulation_state.py  stack.py  stack_creator.py  user_input_handler.py
src/blocksworld_simulation/simulation/simulation_actions/: __init__.py  execute_plan_action.py  get_full_status_action.py  get_rules_action.py  get_scenarios_action.py  get_status_action.py  pick_up_action.py  (+10 more)
src/simulation/: box.py  robot.py  robot_arm.py  settings.py  simulation.py
(+31 files in other folders)
