[tool.poetry]
name = "blocksworld-simulation"
version = "0.0.1"
description = "A blocks world simulation with pygame visualization and Flask REST API"
authors = [
    "Jayanth Somashekaraiah <jayanth.somashekaraiah@hsu-hh.de>",
    "Niklas Jobs <niklas.jobs@hsu-hh.de>",
    "Maximilian Weigand <maximilian.weigand@hsu-hh.de>", 
    "Luis Miguel Vieira da Silva <miguel.vieira@hsu-hh.de>"
]
license = "MIT"
readme = "README.md"
packages = [{include = "blocksworld_simulation", from = "src"}]

[tool.poetry.scripts]
blocksworld-simulation = "blocksworld_simulation.main:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pygame = ">=2.6.1,<3.0.0"
flask = ">=3.1.1,<4.0.0"
pydantic = ">=2.0.0,<3.0.0"