[project]
name = "blocksworld-simulation"
version = "0.0.1"
description = "A blocks world simulation with pygame visualization and Flask REST API"
authors = [
    {name = "Jayanth Somashekaraiah", email = "jayanth.somashekaraiah@hsu-hh.de"},
    {name = "Niklas Jobs", email = "niklas.jobs@hsu-hh.de"},
    {name = "Maximilian Weigand", email = "maximilian.weigand@hsu-hh.de"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "flask (>=3.1.1,<4.0.0)"
]